(Se connecter et Tableau User/index)

--- a/SafeCity2607last/appsettings.json
+++ b/SafeCity2607last/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=HACKER-SALEDD\\SQLEXPRESS;Database=aspnet-SafeCity2020S;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "DefaultConnection": "Server=HANDSHEKER\\SQLEXPRESS;Database=SafeCity;Trusted_Connection=True;MultipleActiveResultSets=true",
 
         "Logging": {
             "LogLevel": {
