--- a/SafeCity2607last/SafeCity2607last.csproj
+++ b/SafeCity2607last/SafeCity2607last.csproj
@@ -6,6 +6,11 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20200814110811_MigVENuniqe.cs" />
+    <Compile Remove="Data\Migrations\20200814110811_MigVENuniqe.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
